--- a/src/CardCommerce.Core/CardCommerce.Core.csproj
+++ b/src/CardCommerce.Core/CardCommerce.Core.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="API\" />
+    <Folder Include="Service\" />
+  </ItemGroup>
+
 </Project>
