--- a/test/CardCommerce.Core.Tests/CardCommerce.Core.Tests.csproj
+++ b/test/CardCommerce.Core.Tests/CardCommerce.Core.Tests.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\CardCommerce.Core\CardCommerce.Core.csproj" />
+  </ItemGroup>
+
 </Project>
